--- a/analyses.Rmd
+++ b/analyses.Rmd
@@ -14,6 +14,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 #rbind the dataframes
 
+smcov.data<-read.csv("data/covariates_smallStems.csv")
+data<-read.csv("data/samp1data_201402.csv")
+
+
+
+
 
 
 ```
