--- a/analyses.Rmd
+++ b/analyses.Rmd
@@ -14,13 +14,26 @@ library(readr)
 library(vegan)
 ```
 
-```{r setup, include=FALSE,message=FALSE}
+```{r setup, message=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
 #load data
 
 initial_mass <- read_in_initial_mass()
 ggplot(initial_mass,aes(y=totalSampleDryMass,x=Species,fill=size))+geom_violin()+ theme(axis.text.x=element_text(angle=90,hjust=1)) + scale_y_log10()
+
+harvest_data<-LoadHarvestFiles()
+harvest_data1<-CalcTotalDryMass(harvest_data)
+harvest_data2<-CalcDensity(harvest_data1)
+harvest_mass<-ReorgDataFrame(harvest_data2)
+
+
+#merge files
+colnames(initial_mass)
+colnames(harvest_mass)
+mass.data<-rbind(initial_mass, harvest_mass)
+
+ggplot(mass.data, aes(x=time, y=totalSampleDryMass)) + geom_point()
 
 
 ```
